# spark-loader

./: .gitignore  README.md  pyproject.toml
conf/: local.yaml
local_settings/: local.yaml
outputs/2023-12-09/13-41-13/.hydra/: config.yaml
spark_loader/: config.py  logging.py  spark.py
spark_loader/local_settings/: local.yaml
tests/: test_hydra.py  test_spark.py
